--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -195,7 +195,7 @@
     border: none;
     border-radius: 10px;
 }
-.searchBarTag-2xRzm8 {
+.search-bar-tag {
     background: #4F1C4F;
     border-radius: 10px;
 }
